# SLAM

./: README.md  ch2
ch03-3D_Rigid_body/UseEigen/: CMakeLists.txt  EigenMatrix.cpp  ch3.kdev4
ch03-3D_Rigid_body/UseEigen/.kdev4/: ch3.kdev4
ch03-3D_Rigid_body/UseGeo/: .UseGeometry.cpp.kate-swp  CMakeLists.txt  UseGeo.kdev4
ch03-3D_Rigid_body/UseGeo/.kdev4/: UseGeo.kdev4
ch03-3D_Rigid_body/practice1/: CMakeLists.txt  practice1.cpp
ch04-Lie_group_alg/UseSophus/: CMakeLists.txt  UseSophus.cpp
ch04-Lie_group_alg/UseSophus/.kdev4/: UseSophus.kdev4
ch05-Camera_and_image/: ch5.kdev4
ch05-Camera_and_image/ImageBasics/: ch5.kdev4  imageBasics.cpp
ch05-Camera_and_image/ImageBasics/.kdev4/: ch5.kdev4
ch05-Camera_and_image/joinMap/: CMakeLists.txt
ch05-Camera_and_image/joinMap/.kdev4/: joinMap.kdev4
ch06-Nonlinear_optimization/ceres-curve-fitting/: CMakeLists.txt  ceres-curve-fitting.kdev4
ch06-Nonlinear_optimization/g2o-curve-fitting/: CMakeLists.txt  main.cpp
ch06-Nonlinear_optimization/g2o-curve-fitting/.kdev4/: g2o-curve-fitting.kdev4
ch07-Visual_odometry/.kdev4/: ch7.kdev4
ch07-Visual_odometry/pose_estimation_2d2d/: main.cpp
ch07-Visual_odometry/pose_estimation_2d2d/.kdev4/: pose_estimation_2d2d.kdev4
ch07-Visual_odometry/pose_estimation_3d2d/: pose_estimation_3d2d.kdev4
ch07-Visual_odometry/pose_estimation_3d2d/.kdev4/: pose_estimation_3d2d.kdev4
ch07-Visual_odometry/pose_estimation_3d3d/: CMakeLists.txt  main.cpp
ch07-Visual_odometry/test/: CMakeLists.txt
ch07-Visual_odometry/triangulation/: main.cpp  triangulation.kdev4
ch07-Visual_odometry/triangulation/.kdev4/: triangulation.kdev4
ch08-Visual_odometry_part2/directMethod/direct_sparse/: direct_sparse.kdev4  main.cpp
ch08-Visual_odometry_part2/directMethod/direct_sparse/.kdev4/: direct_sparse.kdev4
ch08-Visual_odometry_part2/useLk/: useLk.kdev4
ch08-Visual_odometry_part2/useLk/.kdev4/: _custom.kdev4
ch10/: CMakeLists.txt
ch10/g2o_custombundle/: .g2o_bal_class.h.kate-swp  CMakeLists.txt  g2o_bal_class.h  g2o_bundle.cpp  g2o_custombundle.kdev4
ch10/g2o_custombundle/.kdev4/: g2o_custombundle.kdev4
ch11/: CMakeLists.txt  pose_graph_g2o_lie_algera.cpp
ch11_Bundle_adjustment_part2/: pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algera.cpp
ch3/: EigenMatrix.cpp
ch3/UseEigen/: EigenMatrix.cpp
ch3/UseGeo/: CMakeLists.txt  UseGeometry.cpp
ch3/UseGeo/.kdev4/: UseGeo.kdev4
ch3/practice1/: practice1.cpp
ch4/UseSophus/: .UseSophus.cpp.kate-swp  UseSophus.cpp  UseSophus.kdev4
ch4/UseSophus/.kdev4/: UseSophus.kdev4
ch5/: imageBasics.cpp
ch5/.kdev4/: ch5.kdev4
ch5/ImageBasics/: CMakeLists.txt  imageBasics.cpp
ch5/joinMap/: .joinMap.cpp.kate-swp  CMakeLists.txt  joinMap.cpp
ch5/joinMap/.kdev4/: joinMap.kdev4
ch6/ceres-curve-fitting/: .main.cpp.kate-swp  main.cpp
ch6/ceres-curve-fitting/.kdev4/: ceres-curve-fitting.kdev4
ch6/g2o-curve-fitting/: CMakeLists.txt  g2o-curve-fitting.kdev4  main.cpp
ch6/g2o-curve-fitting/.kdev4/: g2o-curve-fitting.kdev4
ch7/: .feature_extraction.cpp.kate-swp  CMakeLists.txt  feature_extraction.cpp
ch7/pose_estimation_2d2d/: CMakeLists.txt  main.cpp  pose_estimation_2d2d.kdev4
ch7/pose_estimation_2d2d/.kdev4/: pose_estimation_2d2d.kdev4
ch7/pose_estimation_3d2d/: .main.cpp.kate-swp  CMakeLists.txt  main.cpp
ch7/pose_estimation_3d2d/.kdev4/: pose_estimation_3d2d.kdev4
ch7/pose_estimation_3d3d/: main.cpp
ch7/test/: main.cpp
ch7/triangulation/: .main.cpp.kate-swp  CMakeLists.txt  main.cpp
ch8/: CMakeLists.txt
ch8/directMethod/direct_sparse/: CMakeLists.txt  main.cpp
ch8/directMethod/direct_sparse/.kdev4/: direct_sparse.kdev4
ch8/useLk/: .main.cpp.kate-swp  CMakeLists.txt  main.cpp
ch8/useLk/.kdev4/: useLk.kdev4
project/: project.kdev4
project/.kdev4/: project.kdev4
project/0.1/include/myslam/: .camera.cpp.kate-swp  .camera.h.kate-swp  .config.h.kate-swp  .map.h.kate-swp  camera.cpp  camera.h  common_include.h  config.cpp  config.h  frame.h  map.h
project/0.1/src/: .camera.cpp.kate-swp  .frame.cpp.kate-swp  CMakeLists.txt  camera.cpp  config.cpp  frame.cpp  map.cpp  mappoint.cpp
project/0.2/: CMakeLists.txt
project/0.2/cmake_modules/: FindG2O.cmake
project/0.2/config/: default.yaml
project/0.2/include/myslam/: common_include.h  config.h  frame.h  map.h  mappoint.h  visual_odometry.h
project/0.2/src/: CMakeLists.txt  camera.cpp  config.cpp  frame.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
project/0.2/test/: run_vo.cpp
project/0.3/config/: default.yaml
project/0.3/include/myslam/: camera.h  common_include.h  config.h  frame.h  g2o_types.h  map.h
project/0.3/src/: CMakeLists.txt  camera.cpp  frame.cpp  g2o_types.cpp  mappoint.cpp  visual_odometry.cpp
project/0.3/test/: run_vo.cpp
